backend-prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pyaha-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: backend
        image: registry.gitlab.com/vmt-py/base-de-datos-vmt/backend-pyaha:latest
        command: ["entrypoints/entrypoint-backend-prod.sh"]
        ports:
        - name: http
          containerPort: 8000 
        # livenessProbe:
        #   httpGet:
        #     path: /ruta-de-salud # Reemplaza con la ruta correcta de tu aplicación para verificar su salud
        #     port: 8000
        # readinessProbe:
        #   httpGet:
        #     path: /ruta-de-salud # Reemplaza con la ruta correcta de tu aplicación para verificar su disponibilidad
        #     port: 8000
