backend-prod/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: pyaha-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: celery
        image: registry.gitlab.com/vmt-py/base-de-datos-vmt/backend-pyaha:latest
        command: ["entrypoints/entrypoint-celery-prod.sh"]
