backend-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-prod
  template:
    metadata:
      labels:
        app: backend-prod
    spec:
      containers:
        - name: backend-prod
          image: <image-name>
          volumeMounts:
            - name: static-volume-prod
              mountPath: /home/appuser/app/staticfiles
      volumes:
        - name: static-volume-prod
          emptyDir: {}
      imagePullSecrets:
        - name: <image-pull-secret>
      restartPolicy: Always
