backend-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-prod
spec:
  selector:
    app: backend-prod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
