backend-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-prod-ingress
  namespace: pyaha-backend
  labels:
    app: backend-prod
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend-prod-service
                port:
                  number: 8000
